Update CSS styles and create new custom navmenu with nice animation and gradient, icons. and header is fully responsiveness

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,22 @@ html {
 .bg-hero {
   background-image: url('../assets/images/hero-bg.jpg');
 }
+
+.reverse {
+  background: linear-gradient(to left, #f7a582, #65e3c6, #f7a582);
+}
+
+.transform-custom {
+  transform-origin: top;
+  transform: perspective(999px) rotateX(-30deg) translateZ(0) translateZ(5px) !important;
+  visibility: hidden;
+  opacity: 0;
+  transition: 300ms;
+}
+.undo-transform-custom {
+  transform-origin: top;
+  transform: perspective(999px) rotateX(0deg) translateZ(0) translateZ(5px) !important;
+  visibility: visible;
+  opacity: 1;
+  transition: 300ms;
+}
